// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarms-time-line-card Renders \`alarms-time-line-card\` with html as message 1`] = `
<div
  class="time-line-card"
>
  <div
    class="time-line-card__header text--secondary"
  >
    <!---->
    <p>
      Periodic behavior enabled by system
    </p>
  </div>
  <div
    class="time-line-card__content text--disabled"
  >
    <div>
      <p>
        Pbehavior Name pbh. Type: Default pause. Reason: Test reason
      </p>
    </div>
  </div>
</div>
`;

exports[`alarms-time-line-card Renders \`alarms-time-line-card\` with state but without translate 1`] = `
<div
  class="time-line-card"
>
  <div
    class="time-line-card__header text--secondary"
  >
    <c-alarm-chip-stub
      class="chips pr-2"
      type="state"
      value="3"
    />
    <p>
      State increased by root
    </p>
  </div>
  <div
    class="time-line-card__content text--disabled"
  >
    <p>
        Idle rule Test all resource
    </p>
  </div>
</div>
`;

exports[`alarms-time-line-card Renders \`alarms-time-line-card\` with state but without translate 2`] = `
<div
  class="time-line-card"
>
  <div
    class="time-line-card__header text--secondary"
  >
    <c-alarm-chip-stub
      class="chips pr-2"
      type="status"
      value="3"
    />
    <p>
      Status decreased by system (role)
    </p>
  </div>
  <div
    class="time-line-card__content text--disabled"
  >
    <p>
        Status dec
    </p>
  </div>
</div>
`;

exports[`alarms-time-line-card Renders \`alarms-time-line-card\` with state counter type 1`] = `
<div
  class="time-line-card"
>
  <div
    class="time-line-card__header text--secondary"
  >
    <p>
      Cropped Severity (since last change of status)
    </p>
  </div>
  <div
    class="time-line-card__content text--disabled"
  >
    <table>
      <tbody>
        <tr>
          <td>
            State increased :
          </td>
          <td />
        </tr>
        <tr>
          <td>
            State decreases :
          </td>
          <td />
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`alarms-time-line-card Renders \`alarms-time-line-card\` with states 1`] = `
<div
  class="time-line-card"
>
  <div
    class="time-line-card__header text--secondary"
  >
    <p>
      Cropped Severity (since last change of status)
    </p>
  </div>
  <div
    class="time-line-card__content text--disabled"
  >
    <table>
      <tbody>
        <tr>
          <td>
            State increased :
          </td>
          <td />
        </tr>
        <tr>
          <td>
            State decreases :
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Severity critical :
          </td>
          <td>
            critical
          </td>
        </tr>
        <tr>
          <td>
            Severity major :
          </td>
          <td>
            major
          </td>
        </tr>
        <tr>
          <td>
            Severity minor :
          </td>
          <td>
            minor
          </td>
        </tr>
        <tr>
          <td>
            Severity ok :
          </td>
          <td>
            ok
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`alarms-time-line-card Renders \`alarms-time-line-card\` without translate 1`] = `
<div
  class="time-line-card"
>
  <div
    class="time-line-card__header text--secondary"
  >
    <!---->
    <p>
      Periodic behavior enabled by system
    </p>
  </div>
  <div
    class="time-line-card__content text--disabled"
  >
    <p>
        Pbehavior Name pbh. Type: Default pause. Reason: Test reason
    </p>
  </div>
</div>
`;
